local-sample/deployment-keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-keycloak
spec:
  selector:
    matchLabels:
      run: my-keycloak
  replicas: 1
  template:
    metadata:
      labels:
        run: my-keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:17.0.1 #After testing, version 18 and 17.0.1 works on M1 MacBook, for more information https://github.com/keycloak/keycloak/issues/8825
          args: [ "start-dev" ]
          ports:
            - containerPort: 8080
            - containerPort: 8443
