local-sample/services-keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    run: my-keycloak
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      name: http
    - port: 8443
      protocol: TCP
      name: https
  selector:
    run: my-keycloak
